# btc_descriptor

./: .gitignore  CMakeLists.txt  README.MD  package.xml
config/: config_indoor.yaml  config_outdoor.yaml
example/: place_recognition.cpp
include/: btc.h  utils.h
launch/: place_recognition.launch
poses/: kitti00.txt  kitti02.txt  kitti05.txt  kitti06.txt  kitti07.txt  kitti08.txt
rviz_cfg/: loop.rviz
src/: btc.cpp  utils.cpp
